--- a/Projeto_Prática01_UFJF_Bruno.ipynb
+++ b/Projeto_Prática01_UFJF_Bruno.ipynb
@@ -18,6 +18,7 @@
       },
       "outputs": [],
       "source": [
+        "#bibliotecas utilizadas\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf\n",
@@ -72,17 +73,14 @@
         "\n",
         "        return warp_img\n",
         "\n",
-        "    def detectAndDescribe(self, img):\n",
-        "        '''\n",
-        "        The Detector and Descriptor\n",
-        "        '''\n",
-        "        # SIFT detector and descriptor\n",
+        "    def detectAndDescribe(self, img): # SIFT detector and descriptor\n",
+        "\n",
         "        sift = cv2.xfeatures2d.SIFT_create()\n",
         "        kps, features = sift.detectAndCompute(img,None)\n",
         "\n",
         "        return kps, features\n",
         "\n",
-        "    def matchKeyPoint(self, kps_l, kps_r, features_l, features_r, ratio):\n",
+        "    def matchKeyPoint(self, kps_l, kps_r, features_l, features_r, ratio): #procurando keypoints entre as 2 imagens\n",
         "        '''\n",
         "            Match the Keypoints beteewn two image\n",
         "        '''\n",
@@ -228,12 +226,12 @@
         "        elif (blending_mode == \"linearBlendingWithConstant\"):\n",
         "            stitch_img = blender.linearBlendingWithConstantWidth([img_left, stitch_img])\n",
         "\n",
-        "        # remove the black border\n",
-        "        stitch_img = self.removeBlackBorder(stitch_img)\n",
+        "\n",
+        "        stitch_img = self.removeBlackBorder(stitch_img) #removendo bordas da imagem\n",
         "\n",
         "        return stitch_img\n",
         "\n",
-        "    def removeBlackBorder(self, img):\n",
+        "    def removeBlackBorder(self, img): #removendo bordas da imagem\n",
         "        '''\n",
         "        Remove img's the black border\n",
         "        '''\n",
@@ -272,7 +270,7 @@
       },
       "outputs": [],
       "source": [
-        "class Homography:\n",
+        "class Homography: #homografia\n",
         "    def solve_homography(self, P, m):\n",
         "        \"\"\"\n",
         "        Solve homography matrix\n",
@@ -367,7 +365,7 @@
         "\n",
         "    fileNameList = [('hill1', 'hill2')]\n",
         "    for fname1, fname2 in fileNameList:\n",
-        "        # Read the img file\n",
+        "        # leitura da imagem\n",
         "        src_path = \"img/\"\n",
         "        fileName1 = fname1\n",
         "        fileName2 = fname2\n",
@@ -379,12 +377,12 @@
         "        stitcher = Stitcher()\n",
         "        warp_img = stitcher.stitch([img_left, img_right], blending_mode)\n",
         "\n",
-        "        # plot the stitched image\n",
+        "        # plot da imagem\n",
         "        plt.figure(13)\n",
         "        plt.title(\"warp_img\")\n",
         "        plt.imshow(warp_img[:,:,::-1].astype(int))\n",
         "\n",
-        "        # save the stitched iamge\n",
+        "        # imagem salva\n",
         "        saveFilePath = \"img/u4.jpg\".format(fileName1, fileName2, blending_mode)\n",
         "        cv2.imwrite(saveFilePath, warp_img)\n",
         "\n",
