--- a/Projeto_Prática01_UFJF_Bruno.ipynb
+++ b/Projeto_Prática01_UFJF_Bruno.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "eCzLNxr3UNo1"
       },
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "fhOssOiFUNpD"
       },
@@ -48,26 +48,26 @@
         "        print(\"Left img size (\", hl, \"*\", wl, \")\")\n",
         "        print(\"Right img size (\", hr, \"*\", wr, \")\")\n",
         "\n",
-        "       
+        "\n",
         "        print(\"Step1 - Extract the keypoints and features by SIFT detector and descriptor...\")\n",
         "        kps_l, features_l = self.detectAndDescribe(img_left)\n",
         "        kps_r, features_r = self.detectAndDescribe(img_right)\n",
         "\n",
         "\n",
-        "       
+        "\n",
         "        print(\"Step2 - Extract the match point with threshold (David Lowe’s ratio test)...\")\n",
         "        matches_pos = self.matchKeyPoint(kps_l, kps_r, features_l, features_r, ratio)\n",
         "        print(\"The number of matching points:\", len(matches_pos))\n",
         "\n",
-        "        
+        "\n",
         "        self.drawMatches([img_left, img_right], matches_pos)\n",
         "\n",
-        "        
+        "\n",
         "        print(\"Step3 - Fit the best homography model with RANSAC algorithm...\")\n",
         "        HomoMat = self.fitHomoMat(matches_pos)\n",
         "\n",
         "\n",
-        "        
+        "\n",
         "        print(\"Step4 - Warp image to create panoramic image...\")\n",
         "        warp_img = self.warp([img_left, img_right], HomoMat, blending_mode)\n",
         "\n",
@@ -81,7 +81,9 @@
         "        return kps, features\n",
         "\n",
         "    def matchKeyPoint(self, kps_l, kps_r, features_l, features_r, ratio): #procurando keypoints entre as 2 imagens\n",
-        "       
+        "        '''\n",
+        "            Match the Keypoints beteewn two image\n",
+        "        '''\n",
         "        Match_idxAndDist = [] # min corresponding index, min distance, seccond min corresponding index, second min distance\n",
         "        for i in range(len(features_l)):\n",
         "            min_IdxDis = [-1, np.inf]  # record the min corresponding index, min distance\n",
@@ -111,7 +113,7 @@
         "        return goodMatches_pos\n",
         "\n",
         "    def drawMatches(self, imgs, matches_pos):\n",
-        "       
+        "\n",
         "\n",
         "        # initialize the output visualization image\n",
         "        img_left, img_right = imgs\n",
@@ -139,7 +141,7 @@
         "        return vis\n",
         "\n",
         "    def fitHomoMat(self, matches_pos):\n",
-        "        
+        "\n",
         "        dstPoints = [] # i.e. left image(destination image)\n",
         "        srcPoints = [] # i.e. right image(source image)\n",
         "        for dstPoint, srcPoint in matches_pos:\n",
@@ -182,7 +184,7 @@
         "        return Best_H\n",
         "\n",
         "    def warp(self, imgs, HomoMat, blending_mode):\n",
-        "        
+        "\n",
         "        img_left, img_right = imgs\n",
         "        (hl, wl) = img_left.shape[:2]\n",
         "        (hr, wr) = img_right.shape[:2]\n",
@@ -223,7 +225,7 @@
         "        return stitch_img\n",
         "\n",
         "    def removeBlackBorder(self, img): #removendo bordas da imagem\n",
-        "       
+        "\n",
         "        h, w = img.shape[:2]\n",
         "        reduced_h, reduced_w = h, w\n",
         "        # right to left\n",
@@ -247,13 +249,12 @@
         "                reduced_h = reduced_h - 1\n",
         "\n",
         "        return img[:reduced_h, :reduced_w]\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "CSN1KaBbUNpT"
       },
@@ -261,17 +262,7 @@
       "source": [
         "class Homography: #homografia\n",
         "    def solve_homography(self, P, m):\n",
-        "        \"\"\"\n",
-        "        Solve homography matrix\n",
         "\n",
-        "        Args:\n",
-        "            P:  Coordinates of the points in the original plane,\n",
-        "            m:  Coordinates of the points in the target plane\n",
-        "\n",
-        "\n",
-        "        Returns:\n",
-        "            H: Homography matrix\n",
-        "        \"\"\"\n",
         "        try:\n",
         "            A = []\n",
         "            for r in range(len(P)):\n",
@@ -287,13 +278,12 @@
         "        except:\n",
         "            print(\"Error occur!\")\n",
         "\n",
-        "        return H\n",
-        ""
+        "        return H\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "scrolled": false,
         "colab": {
