--- a/Projeto_Prática01_UFJF_Bruno.ipynb
+++ b/Projeto_Prática01_UFJF_Bruno.ipynb
@@ -81,13 +81,11 @@
         "        return kps, features\n",
         "\n",
         "    def matchKeyPoint(self, kps_l, kps_r, features_l, features_r, ratio): #procurando keypoints entre as 2 imagens\n",
-        "        '''\n",
-        "            Match the Keypoints beteewn two image\n",
-        "        '''\n",
-        "        Match_idxAndDist = [] # min corresponding index, min distance, seccond min corresponding index, second min distance\n",
+        "\n",
+        "        Match_idxAndDist = []\n",
         "        for i in range(len(features_l)):\n",
-        "            min_IdxDis = [-1, np.inf]  # record the min corresponding index, min distance\n",
-        "            secMin_IdxDis = [-1 ,np.inf]  # record the second corresponding min index, min distance\n",
+        "            min_IdxDis = [-1, np.inf]\n",
+        "            secMin_IdxDis = [-1 ,np.inf]\n",
         "            for j in range(len(features_r)):\n",
         "                dist = np.linalg.norm(features_l[i] - features_r[j])\n",
         "                if (min_IdxDis[1] > dist):\n",
@@ -98,7 +96,7 @@
         "\n",
         "            Match_idxAndDist.append([min_IdxDis[0], min_IdxDis[1], secMin_IdxDis[0], secMin_IdxDis[1]])\n",
         "\n",
-        "        # ratio test as per Lowe's paper\n",
+        "\n",
         "        goodMatches = []\n",
         "        for i in range(len(Match_idxAndDist)):\n",
         "            if (Match_idxAndDist[i][1] <= Match_idxAndDist[i][3] * ratio):\n",
@@ -115,7 +113,7 @@
         "    def drawMatches(self, imgs, matches_pos):\n",
         "\n",
         "\n",
-        "        # initialize the output visualization image\n",
+        "\n",
         "        img_left, img_right = imgs\n",
         "        (hl, wl) = img_left.shape[:2]\n",
         "        (hr, wr) = img_right.shape[:2]\n",
@@ -123,7 +121,7 @@
         "        vis[0:hl, 0:wl] = img_left\n",
         "        vis[0:hr, wl:] = img_right\n",
         "\n",
-        "        # Draw the match\n",
+        "\n",
         "        for (img_left_pos, img_right_pos) in matches_pos:\n",
         "\n",
         "                pos_l = img_left_pos\n",
@@ -132,18 +130,17 @@
         "                cv2.circle(vis, pos_r, 3, (0, 255, 0), 1)\n",
         "                cv2.line(vis, pos_l, pos_r, (255, 0, 0), 1)\n",
         "\n",
-        "        # return the visualization\n",
+        "\n",
         "        plt.figure(4)\n",
         "        plt.title(\"img with matching points\")\n",
         "        plt.imshow(vis[:,:,::-1])\n",
-        "        #cv2.imwrite(\"Feature matching img/matching.jpg\", vis)\n",
         "\n",
         "        return vis\n",
         "\n",
         "    def fitHomoMat(self, matches_pos):\n",
         "\n",
-        "        dstPoints = [] # i.e. left image(destination image)\n",
-        "        srcPoints = [] # i.e. right image(source image)\n",
+        "        dstPoints = []\n",
+        "        srcPoints = []\n",
         "        for dstPoint, srcPoint in matches_pos:\n",
         "            dstPoints.append(list(dstPoint))\n",
         "            srcPoints.append(list(srcPoint))\n",
@@ -152,7 +149,7 @@
         "\n",
         "        homography = Homography()\n",
         "\n",
-        "        # RANSAC algorithm, selecting the best fit homography\n",
+        "        # RANSAC algoritmo\n",
         "        NumSample = len(matches_pos)\n",
         "        threshold = 5.0\n",
         "        NumIter = 8000\n",
@@ -161,16 +158,16 @@
         "        Best_H = None\n",
         "\n",
         "        for run in range(NumIter):\n",
-        "            SubSampleIdx = random.sample(range(NumSample), NumRamdomSubSample) # get the Index of ramdom sampling\n",
+        "            SubSampleIdx = random.sample(range(NumSample), NumRamdomSubSample)\n",
         "            H = homography.solve_homography(srcPoints[SubSampleIdx], dstPoints[SubSampleIdx])\n",
         "\n",
-        "            # find the best Homography have the the maximum number of inlier\n",
+        "\n",
         "            NumInlier = 0\n",
         "            for i in range(NumSample):\n",
         "                if i not in SubSampleIdx:\n",
-        "                    concateCoor = np.hstack((srcPoints[i], [1])) # add z-axis as 1\n",
-        "                    dstCoor = H @ concateCoor.T # calculate the coordination after transform to destination img\n",
-        "                    if dstCoor[2] <= 1e-8: # avoid divide zero number, or too small number cause overflow\n",
+        "                    concateCoor = np.hstack((srcPoints[i], [1]))\n",
+        "                    dstCoor = H @ concateCoor.T\n",
+        "                    if dstCoor[2] <= 1e-8:\n",
         "                        continue\n",
         "                    dstCoor = dstCoor / dstCoor[2]\n",
         "                    if (np.linalg.norm(dstCoor[:2] - dstPoints[i]) < threshold):\n",
@@ -188,31 +185,28 @@
         "        img_left, img_right = imgs\n",
         "        (hl, wl) = img_left.shape[:2]\n",
         "        (hr, wr) = img_right.shape[:2]\n",
-        "        stitch_img = np.zeros( (max(hl, hr), wl + wr, 3), dtype=\"int\") # create the (stitch)big image accroding the imgs height and width\n",
-        "\n",
+        "        stitch_img = np.zeros( (max(hl, hr), wl + wr, 3), dtype=\"int\")\n",
         "        if (blending_mode == \"noBlending\"):\n",
         "            stitch_img[:hl, :wl] = img_left\n",
         "\n",
-        "        # Transform Right image(the coordination of right image) to destination iamge(the coordination of left image) with HomoMat\n",
-        "        inv_H = np.linalg.inv(HomoMat)\n",
+        "\n",
         "        for i in range(stitch_img.shape[0]):\n",
         "            for j in range(stitch_img.shape[1]):\n",
         "                coor = np.array([j, i, 1])\n",
-        "                img_right_coor = inv_H @ coor # the coordination of right image\n",
+        "                img_right_coor = inv_H @ coor\n",
         "                img_right_coor /= img_right_coor[2]\n",
         "\n",
-        "                # you can try like nearest neighbors or interpolation\n",
-        "                y, x = int(round(img_right_coor[0])), int(round(img_right_coor[1])) # y for width, x for height\n",
+        "\n",
+        "                y, x = int(round(img_right_coor[0])), int(round(img_right_coor[1]))\n",
         "\n",
         "\n",
-        "                # if the computed coordination not in the (hegiht, width) of right image, it's not need to be process\n",
         "                if (x < 0 or x >= hr or y < 0 or y >= wr):\n",
         "                    continue\n",
-        "                # else we need the tranform for this pixel\n",
+        "\n",
         "                stitch_img[i, j] = img_right[x, y]\n",
         "\n",
         "\n",
-        "        # create the Blender object to blending the image\n",
+        "\n",
         "        blender = Blender()\n",
         "        if (blending_mode == \"linearBlending\"):\n",
         "            stitch_img = blender.linearBlending([img_left, stitch_img])\n",
@@ -220,15 +214,14 @@
         "            stitch_img = blender.linearBlendingWithConstantWidth([img_left, stitch_img])\n",
         "\n",
         "\n",
-        "        stitch_img = self.removeBlackBorder(stitch_img) #removendo bordas da imagem\n",
-        "\n",
+        "        stitch_img = self.removeBlackBorder(stitch_img)\n",
         "        return stitch_img\n",
         "\n",
         "    def removeBlackBorder(self, img): #removendo bordas da imagem\n",
         "\n",
         "        h, w = img.shape[:2]\n",
         "        reduced_h, reduced_w = h, w\n",
-        "        # right to left\n",
+        "\n",
         "        for col in range(w - 1, -1, -1):\n",
         "            all_black = True\n",
         "            for i in range(h):\n",
@@ -238,7 +231,7 @@
         "            if (all_black == True):\n",
         "                reduced_w = reduced_w - 1\n",
         "\n",
-        "        # bottom to top\n",
+        "\n",
         "        for row in range(h - 1, -1, -1):\n",
         "            all_black = True\n",
         "            for i in range(reduced_w):\n",
@@ -266,14 +259,14 @@
         "        try:\n",
         "            A = []\n",
         "            for r in range(len(P)):\n",
-        "                #print(m[r, 0])\n",
+        "\n",
         "                A.append([-P[r,0], -P[r,1], -1, 0, 0, 0, P[r,0]*m[r,0], P[r,1]*m[r,0], m[r,0]])\n",
         "                A.append([0, 0, 0, -P[r,0], -P[r,1], -1, P[r,0]*m[r,1], P[r,1]*m[r,1], m[r,1]])\n",
         "\n",
-        "            u, s, vt = np.linalg.svd(A) # Solve s ystem of linear equations Ah = 0 using SVD\n",
-        "            # pick H from last line of vt\n",
+        "            u, s, vt = np.linalg.svd(A)\n",
+        "\n",
         "            H = np.reshape(vt[8], (3,3))\n",
-        "            # normalization, let H[2,2] equals to 1\n",
+        "\n",
         "            H = (1/H.item(8)) * H\n",
         "        except:\n",
         "            print(\"Error occur!\")\n",
@@ -351,8 +344,8 @@
         "        img_left = cv2.imread(src_path + fileName1 + \".jpg\")\n",
         "        img_right = cv2.imread(src_path + fileName2 + \".jpg\")\n",
         "\n",
-        "        # The stitch object to stitch the image\n",
-        "        blending_mode = \"linearBlending\" # three mode - noBlending、linearBlending、linearBlendingWithConstant\n",
+        "\n",
+        "        blending_mode = \"linearBlending\"\n",
         "        stitcher = Stitcher()\n",
         "        warp_img = stitcher.stitch([img_left, img_right], blending_mode)\n",
         "\n",
